--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<script src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js">
+<script src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js">
 </script>
 <script>
 $(document).ready(function(){
@@ -20,7 +20,7 @@ $(document).ready(function(){
 </head>
 
 <body>
-<img src="/statics/images/logo.png" >
+<img src="http://p2.so.qhimgs1.com/t0130237d0b387f9c1e.jpg" >
 <br><br>
 
 <button id="btn">之后插入</button>
